--- a/app/views/index.html
+++ b/app/views/index.html
@@ -215,6 +215,63 @@
             </div>
           </div>
 
+          
+          <div class="govuk-accordion__section">
+            <div class="govuk-accordion__section-header">
+              <h2 class="govuk-accordion__section-heading">
+                <span class="govuk-accordion__section-button" id="accordion-default-heading-interestedparties">
+                  Interested parties
+                </span>
+              </h2>
+            </div>
+            <div id="accordion-default-content-interestedparties" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-interestedparties">
+
+              <div class="govuk-inset-text govuk-!-margin-top-0">
+                <h3 class="govuk-heading-m">
+                  Draft - Interested party journey from email notice
+                  {{ govukTag({
+                    classes: "govuk-tag--red govuk-!-margin-left-1",
+                    text: "WIP"
+                  }) }}
+                </h3>
+                <ul class="govuk-list govuk-list--bullet">
+                  <li>
+                    <a href="/interested-party/v1/householder-appeal-first-notice">Householder appeal first notice (email)</a>
+                  </li>
+                  <li>
+                    <a href="/interested-party/v1/full-planning-appeal-first-notice">Full Planning appeal first notice (email)</a>
+                  </li>
+                </ul>
+                <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
+                  <summary class="govuk-details__summary">
+                    <span class="govuk-details__summary-text">
+                      Jira Tickets (6)
+                    </span>
+                  </summary>
+                  <div class="govuk-details__text">
+                    <h4 class="govuk-heading-s">
+                      Content tickets
+                    </h4>
+                    <ul class="govuk-list govuk-list-bulleted govuk-!-margin-bottom-3">
+                      <li><a href="https://pins-ds.atlassian.net/browse/AS-4209" target="_blank">AS-4209 - Householder appeal notification letter (LPD template)</a></li>
+                      <li><a href="https://pins-ds.atlassian.net/browse/AS-4215" target="_blank">AS-4215 - Full Planning appeal notification letter (LPD template)</a></li>
+                    </ul>
+                    <h4 class="govuk-heading-s">
+                      Design tickets
+                    </h4>
+                    <ul class="govuk-list govuk-list-bulleted">
+                      <li><a href="https://pins-ds.atlassian.net/browse/AS-4210" target="_blank">AS-4210 - Search for an appeal</a></li>
+                      <li><a href="https://pins-ds.atlassian.net/browse/AS-4211" target="_blank">AS-4211 - View appeal details</a></li>
+                      <li><a href="https://pins-ds.atlassian.net/browse/AS-4213" target="_blank">AS-4213 - Submit representation</a></li>
+                      <li><a href="https://pins-ds.atlassian.net/browse/AS-4214" target="_blank">AS-4214 - Submission confirmation email (Gov Notify)</a></li>
+                    </ul>
+                  </div>
+                </details>
+              </div>
+
+            </div>
+          </div>    
+
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
@@ -737,7 +794,7 @@
               </div>
 
             </div>
-          </div>
+          </div>  
 
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
