--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,7 +25,7 @@
         <h2 class="govuk-heading-l">Private Beta Prototypes</h2>
 
         <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
-        
+
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
@@ -38,7 +38,7 @@
 
               <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
-                
+
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
                       classes: "govuk-tag--red govuk-!-margin-bottom-3",
@@ -80,7 +80,7 @@
                       </div>
                     </details>
                   </div>
-                
+
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
                       classes: "govuk-tag--blue govuk-!-margin-bottom-3",
@@ -124,7 +124,7 @@
                       </div>
                     </details>
                   </div>
-                
+
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
                       classes: "govuk-tag--blue govuk-!-margin-bottom-3",
@@ -214,6 +214,131 @@
               </div>
             </div>
           </div>
+
+
+
+
+          <div class="govuk-accordion__section">
+            <div class="govuk-accordion__section-header">
+              <h2 class="govuk-accordion__section-heading">
+                <span class="govuk-accordion__section-button" id="accordion-default-heading-appellant" aria-expanded="true">
+                  Interested party can comment on appeal
+                </span>
+              </h2>
+            </div>
+
+            <div id="accordion-default-content-appellant" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-appellant">
+
+              <div class="govuk-grid-row">
+                <div class="govuk-grid-column-two-thirds">
+
+                  <div class="govuk-inset-text govuk-!-margin-top-0">
+                    {{ govukTag({
+                      classes: "govuk-tag--red govuk-!-margin-bottom-3",
+                      text: "WIP"
+                    }) }}
+                    <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
+                      Draft - Interested party journey from email notice
+                    </h3>
+                    <details class="govuk-details" data-module="govuk-details">
+                      <summary class="govuk-details__summary">
+                        <span class="govuk-details__summary-text">
+                          Jira Tickets (6)
+                        </span>
+                      </summary>
+                      <div class="govuk-details__text">
+                        <h4 class="govuk-heading-s">
+                          Content tickets
+                        </h4>
+                        <ul class="govuk-list govuk-list-bulleted govuk-!-margin-bottom-3">
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4209" target="_blank">AS-4209</a> - Householder appeal notification letter (LPD template)</li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4215" target="_blank">AS-4215</a> - Full Planning appeal notification letter (LPD template)</li>
+                        </ul>
+                        <h4 class="govuk-heading-s">
+                          Design tickets
+                        </h4>
+                        <ul class="govuk-list govuk-list-bulleted">
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4210" target="_blank">AS-4210</a> - Search for an appeal</li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4211" target="_blank">AS-4211</a> - View appeal details</li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4213" target="_blank">AS-4213</a> - Submit representation</li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4214" target="_blank">AS-4214</a> - Submission confirmation email (Gov Notify)</li>
+                        </ul>
+
+                      </div>
+                    </details>
+
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li>
+                        <a href="/interested-party/v1/householder-appeal-first-notice">Householder appeal first notice (email)</a>
+                      </li>
+                      <li>
+                        <a href="/interested-party/v1/full-planning-appeal-first-notice">Full Planning appeal first notice (email)</a>
+                      </li>
+
+                      <br>
+                      <li>
+                        <a href="/interested-party/v1/guidance">
+                          Guidance for commenting on an appeal
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/interested-party/v1/appeal-search">
+                          Search for an appeal
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/interested-party/v1/appeal-search-results">
+                          Appeal results
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/interested-party/v1/appeal-search-no-results">
+                          No results
+                        </a>
+                      </li>
+                      <li>
+                        <!-- <a href="/interested-party/v1/appeal">Appeal public/IP view</a> -->
+                        Appeal public/IP view
+                      </li>
+                      <li>
+                        <!-- <a href="/interested-party/v1/your-name">Your name</a> -->
+                        Your name
+                      </li>
+                      <li>
+                        <!-- <a href="/interested-party/v1/appeal-add-comment-email">Your email address</a> -->
+                        Your email address
+                      </li>
+                      <li>
+                        <!-- <a href="/interested-party/v1/appeal-add-comment">Add comment</a> -->
+                        Add comment
+                      </li>
+                      <li>
+                        <!-- <a href="/interested-party/v1/appeal-add-comment-check-email">Check your answers</a> -->
+                        Check your answers
+                      </li>
+                      <li>
+                        <!-- <a href="/interested-party/v1/appeal-add-comment-confirmed">Confirmation</a> -->
+                        Comment received confirmation
+                      </li>
+                      <li>
+                        <!-- <a href="/interested-party/v1/appeal-ip-comment-added-notify">Notify message about comment</a> -->
+                        Notify message about comment
+                      </li>
+
+                    </ul>
+
+                  </div>
+
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+
+
+
+
 
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
@@ -889,11 +1014,11 @@
                     </ul>
                   </div>
                 </details>
-                
+
               </div>
 
             </div>
-          </div>      
+          </div>
 
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
@@ -945,7 +1070,7 @@
                     </ul>
                   </div>
                 </details>
-              </div>            
+              </div>
 
               <div class="govuk-inset-text govuk-!-margin-top-0">
 
@@ -1035,14 +1160,14 @@
           </div>
 
         </div>
-        
+
         <h2 class="govuk-heading-l govuk-!-margin-top-9">Archived Private Beta Prototypes</h2>
         <p class="govuk-body">
           In upgrading the prototype kit from v9.10.0 to v11.0.0, there were multiple breaking changes. Therefore the prototypes listed below will link to an <a href="https://has-appeal.herokuapp.com/">older instance of Heroku</a>, and will be housed in an <a href="https://github.com/Planning-Inspectorate/householder-appeal-prototype">older Github repository</a>.
         </p>
 
         <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
-        
+
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
@@ -1555,7 +1680,7 @@
                         </ul>
                       </div>
                     </details>
-                    
+
                   </div>
 
                 </div>
@@ -1576,7 +1701,7 @@
 
               <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
-                  
+
                   <div class="govuk-inset-text govuk-!-margin-top-0">
 
                     <h3 class="govuk-heading-m">
