--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,7 +25,7 @@
         <h2 class="govuk-heading-l">Private Beta Prototypes</h2>
 
         <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
-        
+
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
@@ -38,7 +38,7 @@
 
               <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
-                
+
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
                       classes: "govuk-tag--red govuk-!-margin-bottom-3",
@@ -80,7 +80,7 @@
                       </div>
                     </details>
                   </div>
-                
+
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
                       classes: "govuk-tag--blue govuk-!-margin-bottom-3",
@@ -124,7 +124,7 @@
                       </div>
                     </details>
                   </div>
-                
+
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
                       classes: "govuk-tag--blue govuk-!-margin-bottom-3",
@@ -215,7 +215,7 @@
             </div>
           </div>
 
-          
+
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
@@ -234,6 +234,7 @@
                     text: "WIP"
                   }) }}
                 </h3>
+
                 <ul class="govuk-list govuk-list--bullet">
                   <li>
                     <a href="/interested-party/v1/householder-appeal-first-notice">Householder appeal first notice (email)</a>
@@ -241,7 +242,59 @@
                   <li>
                     <a href="/interested-party/v1/full-planning-appeal-first-notice">Full Planning appeal first notice (email)</a>
                   </li>
+
+                  <br>
+                  <li>
+                    <a href="/interested-party/v1/guidance">
+                      Guidance for commenting on an appeal
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/interested-party/v1/appeal-search">
+                      Search for an appeal
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/interested-party/v1/appeal-search-results">
+                      Appeal results
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/interested-party/v1/appeal-search-no-results">
+                      No results
+                    </a>
+                  </li>
+                  <li>
+                    <!-- <a href="/interested-party/v1/appeal">Appeal public/IP view</a> -->
+                    Appeal public/IP view
+                  </li>
+                  <li>
+                    <!-- <a href="/interested-party/v1/your-name">Your name</a> -->
+                    Your name
+                  </li>
+                  <li>
+                    <!-- <a href="/interested-party/v1/appeal-add-comment-email">Your email address</a> -->
+                    Your email address
+                  </li>
+                  <li>
+                    <!-- <a href="/interested-party/v1/appeal-add-comment">Add comment</a> -->
+                    Add comment
+                  </li>
+                  <li>
+                    <!-- <a href="/interested-party/v1/appeal-add-comment-check-email">Check your answers</a> -->
+                    Check your answers
+                  </li>
+                  <li>
+                    <!-- <a href="/interested-party/v1/appeal-add-comment-confirmed">Confirmation</a> -->
+                    Comment received confirmation
+                  </li>
+                  <li>
+                    <!-- <a href="/interested-party/v1/appeal-ip-comment-added-notify">Notify message about comment</a> -->
+                    Notify message about comment
+                  </li>
+
                 </ul>
+
                 <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
                   <summary class="govuk-details__summary">
                     <span class="govuk-details__summary-text">
@@ -270,7 +323,7 @@
               </div>
 
             </div>
-          </div>    
+          </div>
 
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
@@ -794,7 +847,7 @@
               </div>
 
             </div>
-          </div>  
+          </div>
 
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
@@ -946,11 +999,11 @@
                     </ul>
                   </div>
                 </details>
-                
+
               </div>
 
             </div>
-          </div>      
+          </div>
 
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
@@ -1002,7 +1055,7 @@
                     </ul>
                   </div>
                 </details>
-              </div>            
+              </div>
 
               <div class="govuk-inset-text govuk-!-margin-top-0">
 
@@ -1092,14 +1145,14 @@
           </div>
 
         </div>
-        
+
         <h2 class="govuk-heading-l govuk-!-margin-top-9">Archived Private Beta Prototypes</h2>
         <p class="govuk-body">
           In upgrading the prototype kit from v9.10.0 to v11.0.0, there were multiple breaking changes. Therefore the prototypes listed below will link to an <a href="https://has-appeal.herokuapp.com/">older instance of Heroku</a>, and will be housed in an <a href="https://github.com/Planning-Inspectorate/householder-appeal-prototype">older Github repository</a>.
         </p>
 
         <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
-        
+
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
@@ -1612,7 +1665,7 @@
                         </ul>
                       </div>
                     </details>
-                    
+
                   </div>
 
                 </div>
@@ -1633,7 +1686,7 @@
 
               <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
-                  
+
                   <div class="govuk-inset-text govuk-!-margin-top-0">
 
                     <h3 class="govuk-heading-m">
