--- a/app/views/appellant-submission/v12/full/check-your-answers.html
+++ b/app/views/appellant-submission/v12/full/check-your-answers.html
@@ -595,22 +595,24 @@
           {% endif %}
         </dl>
 
-        <h2 class="govuk-heading-l govuk-!-margin-top-9">Claim for costs</h2>
-        <dl class="govuk-summary-list">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Details of your claim
-            </dt>
-            <dd class="govuk-summary-list__value">
-              <a href="javascript:preventDefault();">{{ data["appealsub-"+version+"-claimingcosts"] }}</a>
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="javascript:preventDefault();">
-                Change<span class="govuk-visually-hidden"> details of your claim</span>
-              </a>
-            </dd>
-          </div>
-        </dl>
+        {% if data["appealsub-"+version+"-claimingcosts"] %}
+          <h2 class="govuk-heading-l govuk-!-margin-top-9">Claim for costs</h2>
+          <dl class="govuk-summary-list">
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Details of your claim
+              </dt>
+              <dd class="govuk-summary-list__value">
+                <a href="javascript:preventDefault();">{{ data["appealsub-"+version+"-claimingcosts"] }}</a>
+              </dd>
+              <dd class="govuk-summary-list__actions">
+                <a class="govuk-link" href="javascript:preventDefault();">
+                  Change<span class="govuk-visually-hidden"> details of your claim</span>
+                </a>
+              </dd>
+            </div>
+          </dl>
+        {% endif %}
 
         {{ govukButton({
           href: "declaration",
