Updates to deciding appeal hint text

--- a/app/views/appellant-submission/v12/full/procedure-type/decide.html
+++ b/app/views/appellant-submission/v12/full/procedure-type/decide.html
@@ -43,7 +43,7 @@
               value: "Written representations",
               text: "Written representations",
               hint: {
-                text: "The Inspector makes a decision based on a site visit and written statements from you, the local planning department and interested parties. This is the quickest and most common way to make an appeal."
+                text: "For appeals where the issues are clear from written statements and a site visit. This is the quickest and most common way to make an appeal."
               },
               checked: checked("appealsub-"+version+"-proceduretype-decide", "Written representations")
             },
@@ -51,7 +51,7 @@
               value: "Hearing",
               text: "Hearing",
               hint: {
-                text: "The Inspector makes a decision following a site visit and detailed discussion with you, the local planning department and other parties. This is a longer and more complex way to make an appeal."
+                text: "For appeals with more complex issues. The Inspector leads a discussion to answer questions they have about the appeal."
               },
               checked: checked("appealsub-"+version+"-proceduretype-decide", "Hearing")
             },
@@ -59,7 +59,7 @@
               value: "Inquiry",
               text: "Inquiry",
               hint: {
-                text: "The Inspector makes a decision following a site visit and public inquiry involving expert witnesses. This is the longest and most complex way to make an appeal."
+                text: "For appeals with very complex issues. Appeal evidence is tested by legal representatives, who question witnesses under oath."
               },
               checked: checked("appealsub-"+version+"-proceduretype-decide", "Inquiry")
             }
